--- a/dir/style/_random.scss
+++ b/dir/style/_random.scss
@@ -23,6 +23,9 @@
         @media screen and (max-width: $m58) {
             padding: 135px 50px 135px 50px;
         }
+        @media screen and (max-width: $m46) {
+            padding: 115px 50px 115px 50px;
+        }
 
     &-content {
         display: flex;
@@ -48,6 +51,9 @@
                 @media screen and (max-width: $m58) {
                     font-size: 40px;
                 }
+                @media screen and (max-width: $m46) {
+                    font-size: 32px;
+                }
         }
 
         &-count {
@@ -69,6 +75,10 @@
                 @media screen and (max-width: $m58) {
                     font-size: 24px;
                     padding: 20px 20px;
+                }
+                @media screen and (max-width: $m46) {
+                    font-size: 18px;
+                    padding: 18px 20px;
                 }
 
             &:hover {
@@ -108,6 +118,9 @@
                         @media screen and (max-width: $m58) {
                             font-size: 35px;
                         }
+                        @media screen and (max-width: $m46) {
+                            font-size: 26px;
+                        }
                 }
                 
                 input {
@@ -134,6 +147,11 @@
                         }
                         @media screen and (max-width: $m58) {
                             font-size: 35px;
+                        }
+                        @media screen and (max-width: $m46) {
+                            font-size: 32px;
+                            max-width: 110px;
+                            padding: 20px 30px;
                         }
                 }
 
@@ -192,6 +210,9 @@
                     }
                     @media screen and (max-width: $m58) {
                         font-size: 80px;
+                    }
+                    @media screen and (max-width: $m46) {
+                        font-size: 65px;
                     }
                     
             }
