--- a/dir/style/style.css
+++ b/dir/style/style.css
@@ -84,6 +84,12 @@
   }
 }
 
+@media screen and (max-width: 460px) {
+  .header {
+    padding-bottom: 80px;
+  }
+}
+
 .flex-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -142,6 +148,14 @@
   }
 }
 
+@media screen and (max-width: 860px) {
+  .flex-header {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .flex-header-logo {
   margin-top: 6px;
   margin-right: 65px;
@@ -159,6 +173,12 @@
 @media screen and (max-width: 582px) {
   .flex-header-logo {
     margin-right: 35px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .flex-header-logo {
+    margin-right: 25px;
   }
 }
 
@@ -187,6 +207,12 @@
 @media screen and (max-width: 582px) {
   .flex-header-logo a img {
     width: 55px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .flex-header-logo a img {
+    width: 48px;
   }
 }
 
@@ -223,6 +249,13 @@
   }
 }
 
+@media screen and (max-width: 460px) {
+  .flex-header-title h1 {
+    font-size: 28px;
+    max-width: 322px;
+  }
+}
+
 .toolbar {
   background-color: transparent;
   padding: 10px 0;
@@ -231,6 +264,12 @@
   max-width: 100%;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+@media screen and (max-width: 582px) {
+  .toolbar {
+    padding: 20px 0px;
+  }
 }
 
 .toolbar:hover {
@@ -249,6 +288,13 @@
           align-items: center;
 }
 
+@media screen and (max-width: 582px) {
+  .toolbar .flex-toolbar {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
 .toolbar .flex-toolbar-item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -257,6 +303,12 @@
       -ms-flex-align: center;
           align-items: center;
   margin-left: 15px;
+}
+
+@media screen and (max-width: 582px) {
+  .toolbar .flex-toolbar-item {
+    margin-left: 0px;
+  }
 }
 
 .toolbar .flex-toolbar-number a, .toolbar .flex-toolbar-email a {
@@ -281,6 +333,12 @@
 
 .toolbar .flex-toolbar-number a:visited, .toolbar .flex-toolbar-email a:visited {
   color: white;
+}
+
+@media screen and (max-width: 582px) {
+  .toolbar .flex-toolbar-questions {
+    display: none;
+  }
 }
 
 .toolbar .flex-toolbar-questions p {
@@ -338,12 +396,30 @@
   }
 }
 
+@media screen and (max-width: 582px) {
+  .additional-info__text {
+    line-height: 30px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .additional-info__text {
+    font-size: 16px;
+  }
+}
+
 .additional-info__text span {
   font-weight: 400;
 }
 
 .additional-info__text:nth-child(2) {
   margin-bottom: 44px;
+}
+
+@media screen and (max-width: 460px) {
+  .additional-info__text:nth-child(2) {
+    margin-bottom: 32px;
+  }
 }
 
 .additional-info-buttom {
@@ -367,6 +443,12 @@
 @media screen and (max-width: 860px) {
   .additional-info-buttom__more {
     font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .additional-info-buttom__more {
+    font-size: 16px;
   }
 }
 
@@ -410,6 +492,12 @@
   }
 }
 
+@media screen and (max-width: 460px) {
+  .nav-buttons {
+    height: 166px;
+  }
+}
+
 .nav-buttons__rand, .nav-buttons__timer {
   display: block;
   border: 4px solid rgba(255, 255, 255, 0.65);
@@ -438,6 +526,13 @@
   }
 }
 
+@media screen and (max-width: 460px) {
+  .nav-buttons__rand, .nav-buttons__timer {
+    font-size: 18px;
+    padding: 18px 28px;
+  }
+}
+
 .nav-buttons__rand:hover, .nav-buttons__timer:hover {
   border: 4px solid white;
   color: white;
@@ -451,6 +546,12 @@
 @media screen and (max-width: 860px) {
   .nav-buttons__timer {
     padding: 22px 57px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .nav-buttons__timer {
+    padding: 18px 57px;
   }
 }
 
@@ -476,6 +577,12 @@
 @media screen and (max-width: 582px) {
   .separator {
     height: 40px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .separator {
+    height: 26px;
   }
 }
 
@@ -526,6 +633,12 @@
   }
 }
 
+@media screen and (max-width: 460px) {
+  .random {
+    padding: 115px 50px 115px 50px;
+  }
+}
+
 .random-content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -572,6 +685,12 @@
   }
 }
 
+@media screen and (max-width: 460px) {
+  .random-content-title {
+    font-size: 32px;
+  }
+}
+
 .random-content-count {
   padding: 30px 30px;
   border: 4px solid rgba(255, 255, 255, 0.65);
@@ -602,6 +721,13 @@
   .random-content-count {
     font-size: 24px;
     padding: 20px 20px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .random-content-count {
+    font-size: 18px;
+    padding: 18px 20px;
   }
 }
 
@@ -673,6 +799,12 @@
   }
 }
 
+@media screen and (max-width: 460px) {
+  .random-content-form__from label, .random-content-form__to label {
+    font-size: 26px;
+  }
+}
+
 .random-content-form__from input, .random-content-form__to input {
   padding: 35px 30px;
   border: 4px solid transparent;
@@ -710,6 +842,14 @@
 @media screen and (max-width: 582px) {
   .random-content-form__from input, .random-content-form__to input {
     font-size: 35px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .random-content-form__from input, .random-content-form__to input {
+    font-size: 32px;
+    max-width: 110px;
+    padding: 20px 30px;
   }
 }
 
@@ -773,6 +913,12 @@
   }
 }
 
+@media screen and (max-width: 460px) {
+  .random-content .random-result-block .random-result {
+    font-size: 65px;
+  }
+}
+
 .timer {
   background-image: url(../images/watch.jpg);
   background-repeat: no-repeat;
@@ -806,6 +952,18 @@
   }
 }
 
+@media screen and (max-width: 582px) {
+  .timer {
+    padding: 155px 20px 155px 20px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .timer {
+    padding: 120px 20px 120px 20px;
+  }
+}
+
 .timer-title {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
@@ -830,6 +988,18 @@
 @media screen and (max-width: 720px) {
   .timer-title {
     font-size: 50px;
+  }
+}
+
+@media screen and (max-width: 582px) {
+  .timer-title {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .timer-title {
+    font-size: 32px;
   }
 }
 
@@ -866,6 +1036,20 @@
   }
 }
 
+@media screen and (max-width: 582px) {
+  .timer-start {
+    font-size: 24px;
+    padding: 20px 24px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .timer-start {
+    font-size: 18px;
+    padding: 18px 24px;
+  }
+}
+
 .timer-start:hover {
   color: white;
   border: 4px solid white;
@@ -885,6 +1069,18 @@
 @media screen and (max-width: 680px) {
   .timer-result {
     width: 526px;
+  }
+}
+
+@media screen and (max-width: 582px) {
+  .timer-result {
+    width: 436px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .timer-result {
+    width: 352px;
   }
 }
 
@@ -916,6 +1112,20 @@
   }
 }
 
+@media screen and (max-width: 582px) {
+  .timer-result .hours, .timer-result .minutes, .timer-result .seconds {
+    width: 128px;
+    font-size: 50px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .timer-result .hours, .timer-result .minutes, .timer-result .seconds {
+    width: 100px;
+    font-size: 38px;
+  }
+}
+
 .timer-result .seconds {
   margin-right: 0;
 }
@@ -942,6 +1152,18 @@
   }
 }
 
+@media screen and (max-width: 582px) {
+  .timer-result .hours::after {
+    font-size: 25px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .timer-result .hours::after {
+    font-size: 20px;
+  }
+}
+
 .timer-result .minutes::after {
   display: block;
   content: "Минут";
@@ -960,6 +1182,18 @@
   }
 }
 
+@media screen and (max-width: 582px) {
+  .timer-result .minutes::after {
+    font-size: 25px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .timer-result .minutes::after {
+    font-size: 20px;
+  }
+}
+
 .timer-result .seconds::after {
   display: block;
   content: "Секунд";
@@ -975,6 +1209,18 @@
 @media screen and (max-width: 720px) {
   .timer-result .seconds::after {
     font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 582px) {
+  .timer-result .seconds::after {
+    font-size: 25px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .timer-result .seconds::after {
+    font-size: 20px;
   }
 }
 
@@ -1005,6 +1251,18 @@
 @media screen and (max-width: 720px) {
   .timer-setting label {
     font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 582px) {
+  .timer-setting label {
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .timer-setting label {
+    font-size: 18px;
   }
 }
 
@@ -1061,6 +1319,27 @@
 @media screen and (max-width: 680px) {
   .timer-setting .timer-setting__hours, .timer-setting .timer-setting__minutes, .timer-setting .timer-setting__seconds {
     max-width: 80px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .timer-setting .timer-setting__hours, .timer-setting .timer-setting__minutes, .timer-setting .timer-setting__seconds {
+    max-width: 60px;
+  }
+}
+
+@media screen and (max-width: 582px) {
+  .timer-setting .timer-setting__hours, .timer-setting .timer-setting__minutes, .timer-setting .timer-setting__seconds {
+    max-width: 60px;
+    padding: 25px 30px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .timer-setting .timer-setting__hours, .timer-setting .timer-setting__minutes, .timer-setting .timer-setting__seconds {
+    max-width: 34px;
+    font-size: 26px;
+    padding: 20px 30px;
   }
 }
 
