ААдаптив готов, верстка тоже

--- a/dir/style/_random.scss
+++ b/dir/style/_random.scss
@@ -26,6 +26,9 @@
         @media screen and (max-width: $m46) {
             padding: 115px 50px 115px 50px;
         }
+        @media screen and (max-width: $m36) {
+            padding: 95px 50px 95px 50px;
+        }
 
     &-content {
         display: flex;
@@ -54,6 +57,9 @@
                 @media screen and (max-width: $m46) {
                     font-size: 32px;
                 }
+                @media screen and (max-width: $m36) {
+                    font-size: 28px;
+                }
         }
 
         &-count {
@@ -78,6 +84,10 @@
                 }
                 @media screen and (max-width: $m46) {
                     font-size: 18px;
+                    padding: 18px 20px;
+                }
+                @media screen and (max-width: $m36) {
+                    font-size: 16px;
                     padding: 18px 20px;
                 }
 
@@ -121,6 +131,9 @@
                         @media screen and (max-width: $m46) {
                             font-size: 26px;
                         }
+                        @media screen and (max-width: $m36) {
+                            font-size: 22px;
+                        }
                 }
                 
                 input {
@@ -152,6 +165,10 @@
                             font-size: 32px;
                             max-width: 110px;
                             padding: 20px 30px;
+                        }
+                        @media screen and (max-width: $m36) {
+                            font-size: 28px;
+                            max-width: 70px;
                         }
                 }
 
@@ -192,6 +209,9 @@
                 @media screen and (max-width: $m58) {
                     height: 198px;
                 }
+                @media screen and (max-width: $m36) {
+                    height: 168px;
+                }
             .random-result {
                 display: none;
                 font-family: $roboto;
@@ -213,6 +233,9 @@
                     }
                     @media screen and (max-width: $m46) {
                         font-size: 65px;
+                    }
+                    @media screen and (max-width: $m36) {
+                        font-size: 55px;
                     }
                     
             }
