--- a/dir/style/_timer.scss
+++ b/dir/style/_timer.scss
@@ -45,6 +45,9 @@
             @media screen and (max-width: $m46) {
                 font-size: 32px;
             }
+            @media screen and (max-width: $m36) {
+                font-size: 28px;
+            }
     }
 
     &-start {
@@ -76,6 +79,10 @@
                 font-size: 18px;
                 padding: 18px 24px;
             }
+            @media screen and (max-width: $m36) {
+                font-size: 16px;
+                padding: 18px 24px;
+            }
 
         &:hover {
             color: rgba(255, 255, 255, 1);
@@ -96,6 +103,9 @@
             }
             @media screen and (max-width: $m46) {
                 width: 352px;
+            }
+            @media screen and (max-width: $m36) {
+                width: 294px;
             }
 
         .hours, .minutes, .seconds {
@@ -123,7 +133,14 @@
                     width: 100px;
                     font-size: 38px;
                 }
-                
+                @media screen and (max-width: $m46) {
+                    width: 93px;
+                    font-size: 38px;
+                }
+                @media screen and (max-width: $m36) {
+                    width: 90px;
+                    font-size: 36px;
+                }
         }
 
         .seconds {
@@ -150,6 +167,9 @@
                 @media screen and (max-width: $m46) {
                     font-size: 20px;
                 }
+                @media screen and (max-width: $m36) {
+                    font-size: 18px;
+                }
         }
 
         .minutes::after {
@@ -168,6 +188,9 @@
                 @media screen and (max-width: $m46) {
                     font-size: 20px;
                 }
+                @media screen and (max-width: $m36) {
+                    font-size: 18px;
+                }
         }
 
         .seconds::after {
@@ -185,6 +208,9 @@
                 }
                 @media screen and (max-width: $m46) {
                     font-size: 20px;
+                }
+                @media screen and (max-width: $m36) {
+                    font-size: 18px;
                 }
         }
     }
@@ -212,6 +238,9 @@
                 @media screen and (max-width: $m46) {
                     font-size: 18px;
                 }
+                @media screen and (max-width: $m36) {
+                    font-size: 16px;
+                }
             }
 
             .hours-setter, .minutes-setter, .seconds-setter {
@@ -221,6 +250,9 @@
                 margin-left: 45px;
                     @media screen and (max-width: $m68) {
                         margin-left: 26px;
+                    }
+                    @media screen and (max-width: $m36) {
+                        margin-left: 12px;
                     }
             }
 
@@ -258,6 +290,11 @@
                     @media screen and (max-width: $m46) {
                         max-width: 34px;
                         font-size: 26px;
+                        padding: 20px 30px;
+                    }
+                    @media screen and (max-width: $m36) {
+                        max-width: 22px;
+                        font-size: 18px;
                         padding: 20px 30px;
                     }
                     
